// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatsEntry component Should render the StatsEntry component 1`] = `
<DocumentFragment>
  <div
    class="c-section__entry c-section__entry--no-background"
  >
    <div
      class="o-shell"
    >
      <h3>
        Test title
      </h3>
      <ul
        class="c-section__list"
      >
        <li>
          <span>
            Test title:
          </span>
          <strong>
            Test value
          </strong>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsEntry component Should unmount the StatsEntry component 1`] = `<DocumentFragment />`;

exports[`StatsError component Should render the StatsError component 1`] = `
<DocumentFragment>
  <div
    class="c-section__entry c-section__entry--no-background"
  >
    <div
      class="o-shell"
    >
      <h3>
        Github profile statistics
      </h3>
      <p>
        Failed fetching data from Github. Please check again in 8 hours.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsError component Should unmount the StatsError component 1`] = `<DocumentFragment />`;
